--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,24 @@ htmlcov/
 .vscode/
 
 # If you later add datasets or outputs you want ignored, append them below.
+# Generated Data & Memory
+conversation_data.json
+synthetic_experiences.json
+long_term_memory.json
+swarm_collective_memory.json
+phase_transition_results.json
 episodic_memory.json
+
+# Model Weights (Binary)
+*.npz
+*.pt
+*.pth
+*.bin
+
+# Generated Plots & Images
+*.png
+*.jpg
+*.jpeg
+
+# Experiment Outputs
+phase3_output.txt
